--- a/src/main.css
+++ b/src/main.css
@@ -2,14 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab:wght@100..900&display=swap");
-
 body.dark {
     background-color: #2f353b;
 }
 
 .icon-wrapper {
-    background-image: url(./img/sun-icon.svg);
+    background-image: url(./img/sun-icon.svtailg);
     background-size: cover;
     background-repeat: no-repeat;
 }
