--- a/src/main.css
+++ b/src/main.css
@@ -48,30 +48,35 @@ body.dark .icon-addnote {
     background-image: url(./star-btn_gold.svg);
 }
 
-.scrollbar::-webkit-scrollbar {
+.scrollbar::-webkit-scrollbar,
+.listScroll::-webkit-scrollbar {
     width: 10px;
     cursor: pointer;
 }
 
-.scrollbar::-webkit-scrollbar-track {
+.scrollbar::-webkit-scrollbar-track,
+.listScroll::-webkit-scrollbar-track {
     border-radius: 10px;
     background: #189ab4;
     cursor: pointer;
 }
 
-.scrollbar::-webkit-scrollbar-thumb {
+.scrollbar::-webkit-scrollbar-thumb,
+.listScroll::-webkit-scrollbar-thumb {
     background: #d9d9d9;
     border-radius: 10px;
     border: 3px solid #189ab4;
     cursor: pointer;
 }
 
-.scrollbar::-webkit-scrollbar-thumb:hover {
+.scrollbar::-webkit-scrollbar-thumb:hover,
+.listScroll::-webkit-scrollbar-thumb:hover {
     background: #fcfcfc;
     cursor: pointer;
 }
 
-.scrollbar::-webkit-resizer {
+.scrollbar::-webkit-resizer,
+.listScroll::-webkit-resizer {
     border: 2px solid black;
     outline: none;
     border: 20px solid transparent;
